--- a/src/pokedex.css
+++ b/src/pokedex.css
@@ -746,8 +746,8 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2rem;
-  margin-top: 0;
+  margin-bottom: 5rem;
+  margin-top: 0rem;
   padding: 0 1rem;
 }
 
